--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^8.4.4",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "otp-generator": "^4.0.1"
   },
   "scripts": {
     "start": "nodemon server.js"
