--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.446.0",
     "react": "^18.2.0",
