--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
